@@ -5,6 +5,21 @@ require 'nkf'
 module Nokogiri
   module HTML
     class TestNode < Nokogiri::TestCase
+      def test_before_will_prepend_text_nodes
+        html = Nokogiri::HTML(<<-eohtml)
+        <html>
+          <head></head>
+          <body>
+            <div>first</div>
+          </body>
+        </html>
+        eohtml
+
+        assert node = html.at('//body').children.first
+        node.before "some text"
+        assert_equal 'some text', html.at('//body').children.first.content.strip
+      end
+
       def test_to_html_does_not_contain_entities
         html = NKF.nkf("-e --msdos", <<-EOH)
         <html><body>
