@@ -4,6 +4,7 @@
 
  * Fixed a tag nesting problem in the Builder API (LH #41)
  * Nokogiri::HTML.fragment will properly handle text only nodes (LH #43)
+ * Nokogiri::XML::Node#before will prepend text nodes (LH #44)
 
 === 1.2.1 / 2008-02-23
 
